force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RR_Edition__c.field-meta.xml
<CustomField>
        <fullName>RR_Edition__c</fullName>
        <label>RR Edition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Essential</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>