force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RR_SubEdition__c.field-meta.xml
<CustomField>
        <fullName>RR_SubEdition__c</fullName>
        <label>RR SubEdition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>