force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RR_Test__c.field-meta.xml
<CustomField>
        <fullName>RR_Test__c</fullName>
        <label>RR Test</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>