force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RR_Type__c.field-meta.xml
<CustomField>
    <fullName>RR_Type__c</fullName>
    <formula>if(!ISBLANK(SBQQ__RequiredBy__c),
if(SBQQ__RequiredBy__r.RR_Index__c &gt;= RR_Index__c, &quot;Included&quot;, &quot;Add-on&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR Type</label>
    <type>Text</type>
</CustomField>