force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__AdditionalQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AdditionalQuantity__c</fullName>
        <description>Additional quantity for this product which contributes to volume discount calculations.</description>
        <inlineHelpText>Additional quantity for this product that contributes to volume discount calculations</inlineHelpText>
        <label>Additional Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>