force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__AllowAssetRefund__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AllowAssetRefund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the underlying asset may have its quantity refunded. Only relevant for Amendments.</description>
        <inlineHelpText>Indicates whether the asset represented by this line may be refunded.</inlineHelpText>
        <label>Allow Asset Refunds</label>
        <type>Checkbox</type>
    </CustomField>