force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__BatchQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>If products are sold in batches, this stores the quantity in each batch, defaulted from the product.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>