force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__BlockPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</description>
        <inlineHelpText>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>