force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__CarryoverLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CarryoverLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this line as an auto-mapped option on an Upgraded Bundle.</description>
        <inlineHelpText>Denotes this line as an auto-selected option of an upgrade bundle.</inlineHelpText>
        <label>Carry-Over Line</label>
        <type>Checkbox</type>
    </CustomField>