force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ChargeType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </CustomField>