force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ComponentTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentTotal__c</fullName>
        <description>Sum total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>Sum total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component Net Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>