force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Cost__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cost record for this line item.</description>
        <inlineHelpText>Cost record for this line item.</inlineHelpText>
        <label>Cost</label>
        <referenceTo>SBQQ__Cost__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>