force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__CostEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether cost can be edited on this line item.</description>
        <inlineHelpText>Specifies whether cost can be edited on this line item.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </CustomField>