force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__CustomerTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerTotal__c</fullName>
        <description>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</description>
        <formula>IF(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, ISBLANK(SBQQ__PriorQuantity__c)), 0, SBQQ__CustomerPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <inlineHelpText>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</inlineHelpText>
        <label>Customer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>