force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this line item.</description>
        <inlineHelpText>Description for this line item.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </CustomField>