force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Dimension__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimensions within an MDQ Product that all each segment to be priced independently. Each Product may contain several Price Dimensions. Yearly Price Dimensions are treated as Subscriptions.</description>
        <inlineHelpText>Dimensions within an MDQ Product that all each segment to be priced independently. Each Product may contain several Price Dimensions. Yearly Price Dimensions are treated as Subscriptions.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </CustomField>