force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__DiscountTier__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount tier used by this line item. This field is only populated if a product is volume discounted and discount schedule is of type &quot;Range&quot;.</description>
        <inlineHelpText>Discount tier used by this line item. This field is only populated if a volume discount was applied and the discount schedule is of type &quot;Range&quot;.</inlineHelpText>
        <label>Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Quote Lines (Volume Discounted)</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>