force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__DistributorDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>This is a discount that is applied to partner price and reflected in the net price.</description>
        <inlineHelpText>This is a discount that is applied to partner price and reflected in the net price.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>