force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__DynamicOptionId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>