force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Existing__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the customer already owns this product. This is typically used for products with options during add-on quoting. The product is on the quote solely to drive the Configurator.</description>
        <inlineHelpText>Indicates the customer already owns this product. This is typically used for products with options during add-on quoting. The product is on the quote solely to drive the Configurator.</inlineHelpText>
        <label>Existing</label>
        <type>Checkbox</type>
    </CustomField>