force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Favorite__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Favorite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Favorite to which this Quote Line belongs.</description>
        <inlineHelpText>Favorite to which this Quote Line belongs.</inlineHelpText>
        <label>Favorite</label>
        <referenceTo>SBQQ__Favorite__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>