force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__GrossProfit__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GrossProfit__c</fullName>
        <description>Gross profit amount on this line item.</description>
        <inlineHelpText>Gross profit amount on this line item.</inlineHelpText>
        <label>Gross Profit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>