force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Group__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group to which this line belongs, if any.</description>
        <inlineHelpText>Group to which this line belongs, if any.</inlineHelpText>
        <label>Group</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </CustomField>