force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__HasConsumptionSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Quote Line has at least one consumption schedule</description>
        <inlineHelpText>Indicates if this line has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </CustomField>