force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Hidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether this line item is hidden in generated PDF documents.</description>
        <inlineHelpText>Denotes whether this line item is hidden in generated PDF documents.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </CustomField>